--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 	<head>
 		<meta charset="utf-8">
-		<title>Unleash the beast!</title>
+		<title>Angel Eyes FTW!</title>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
 		<script src="processing.js"></script>
 	</head>
 	<body>
 		<header>
-			<h1>Angel Eyes ftw</h1>
+			<h1>Unleash the beast!</h1>
 		</header>
 			<section id="content">
 				<canvas id="Lightning" data-processing-sources="Lightning.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    Smash the mouseclick to unleash the beast 
+		    SMASH the mouseclick to unleash the beast!! 
 	    </footer>
 	</body>
 </html>
